argocd/sandbox/ingress/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-sandbox-bsbingo
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.sandbox.bs-bingo.app`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.sandbox.bs-bingo.app`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-sandbox-bsbingo-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-to-https-redirect
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      priority: 1
      middlewares:
        - name: redirect-to-https
      services:
        - kind: TraefikService
          name: noop@internal
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  redirectScheme:
    scheme: https
    permanent: true
